    * Modified Vacc class to use Vclist, including changes to the Vacc
      interface (and required changes throughout the code)
    * Consolidated Vpmg_ctor and Vpmg_ctorFocus into Vpmg_ctor
    * Consolidated vpmg.c, vpmg-force.c, vpmg-energy.c, vpmg-setup.c
    * Added autoconf support for compilation on the MinGW32 Windows Environment
  - BUG FIXES
    * Fixed a bug in vacc.c where atoms with radii less than 1A were not
      considered instead of atoms with no radii.
    * Fixed error in tools/mesh/dx2mol.c (Thanks to Fred Damberger)
    * Fixed floating point error which resulted in improper grid spacings for
      some cases.
    * Fixed a bug in Vacc_molAcc which generates spurious regions of high
      internal dielectric for molecular surface-based dielectric definitions.
      These regions were very small and apparently affected energies by 1-2%.
      The new version of the molecular surface is actually faster (requires
      50-70% of the time for most cases) but we should all be using the spline
      surface anyway -- right? (Thanks to John Mongan and Jessica Swanson for
      finding this bug). 

#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.2       11-10-04
#############################################################################
  - NEW FEATURES
    * Updated tutorial with more mg-auto examples
    * Updated apbs.spec file for generating RPMs on more platforms.
    * Added new Python wrapper to tools/python directory showing how to run 
      APBS without PQR and .in inputs.
    * Python wrappers are now configured to compile on more architectures/
      from more compilers.
    * Updated tools/conversion/pdb2pqr to a new version (0.1.0) of PDB2PQR,
      which now can handle nucleic acids, rebuild missing heavy atoms, add
      hydrogens, and perform some optimization.
  - BUG FIXES
    * The dimensions of the fine grids in the pka-lig example calculations